systematically changed the ui configuration